<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login"
    android:background="@color/blueLite"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAlignment="center"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/yellow"
        android:textSize="25sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:hint="@string/email"
            android:textSize="15sp"
            android:textColor="@color/blueLite"
            android:background="@color/white"
            android:textStyle="normal"
            android:minHeight="50dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:background="@color/white"
            android:hint="@string/password"
            android:textSize="15sp"
            android:textColor="@color/blueLite"
            android:textStyle="normal"
            android:minHeight="50dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/registerTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/register"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:width="200dp"
        android:height="50dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold" />



</LinearLayout>