<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueStrong"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/applicationTitle"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/white" />
    <ImageView
        android:id="@+id/startImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="187dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/kargo_drone_app_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startImage"
        android:layout_centerVertical="true"
        android:layout_marginTop="88dp"
        android:gravity="center">

        <Button
            android:id="@+id/loginPageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yellow"
            android:text="@string/login"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/registerPageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/grey"
            android:text="@string/register"
            android:textSize="18sp"
            android:textStyle="bold"

            />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/mainLoadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"

        />

</RelativeLayout>